Format files with prettier